# b_blocks

./: CMakeLists.txt  README.md  bayesian_blocks.cpp  bayesian_blocks.h  bayesian_blocks_gaussian.cpp  bayesian_blocks_gaussian.h  light_curve.cpp  light_curve.h  main_bb.cpp  thc_file.cpp  thc_file.h
